# k-traceoids

./: .gitignore  .pre-commit-config.yaml  README.md  evaluation.ipynb  pyproject.toml  requirements.in  requirements.txt  script.py
eval/: create-dataset.ipynb  datasets-statistics.ipynb  evaluate-fitness-precision.py  prepare-labelled-datasets.ipynb  run_script.sh  script.py  stop_script.sh  utils.py
eval/competitors/: actitrac.py  doc2vec.py  one_hot.py  run.py  run_script.sh  schedule.py  script-parallel.py  script.py  threegram.py  utils.py  word2vec.py
evaluation/: bpi2019-sample.ipynb  road-traffic.ipynb
k_traceoids/: __init__.py  algorithm.py  conformance.py  data.py  initialization.py  models.py  parallel.py  reassign.py
k_tracoids/: algorithm.py  parallel.py
tests/: k_traceoids_test.py  test_k_traceoids.py  test_tk_means.py
tk_means/: parallel-old.py  parallel.py
