[project]
name = "k-traceoids"
version = "0.1.0"
description = "A Python library for clustering traces"
authors = [
    {name = "Nefta Kanilmaz",email = "nefta.kanilmaz@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pm4py (>=2.7.17,<3.0.0)",
    "rustxes (>=0.2.11,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
ipykernel = "^6.30.1"
pre-commit = "^4.3.0"

[tool.poetry.group.eval.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.10.6"
scipy = "^1.16.2"
scikit-learn = "^1.7.2"
graphviz = "^0.21"
nltk = "^3.9.2"
gensim = "^4.4.0"
jinja2 = "^3.1.6"

